# X96Dbg-MCP-Server-Plugin

./: CMakeLists.txt  CMakePresets.json  MCPluginForX96Dbg.json  README.md  mcp.json
Release/: MCPluginForX96Dbg.dp32
docs/: 64bit-porting-todo.md  x96dbg_api_summary.md
pluginsdk/snapshot/: commithash.txt
pluginsdk/snapshot/release/translations/: x64dbg_uk.qm
src/: logging.cpp  logging.h  mcp_server.cpp  mcp_server.h  plugin.cpp  version.h
tools/: mcp_tcp_bridge.py  package-plugin.ps1
